<resources>
    <string name="app_name">Ranch Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_menu_ovino">Ovino</string>
    <string name="title_menu_bovino">Bovino</string>
    <string name="numAreteText">Numero de arete</string>
    <string name="textViewSexo">Sexo:</string>
    <string name="contentTextPeso">Peso</string>
    <string name="contentTextAño">Año:</string>
    <string name="contentTextType">Tipo:</string>
</resources>